Se refactorizo la vista de transacciones

--- a/src/View/Transacciones.form
+++ b/src/View/Transacciones.form
@@ -153,23 +153,18 @@
                                           <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
                                       </Group>
                                       <EmptySpace max="-2" attributes="0"/>
-                                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                          <Component id="txtFecha" min="-2" pref="170" max="-2" attributes="0"/>
-                                          <Component id="cbbTipoCuenta" alignment="0" pref="219" max="32767" attributes="0"/>
-                                          <Component id="cbbEmpresa" alignment="0" max="32767" attributes="0"/>
+                                      <Group type="103" groupAlignment="0" attributes="0">
+                                          <Component id="cbbEmpresa" pref="219" max="32767" attributes="0"/>
+                                          <Component id="txtFecha" alignment="0" pref="219" max="32767" attributes="0"/>
+                                          <Component id="cbbTipoCuenta" max="32767" attributes="0"/>
                                           <Component id="cbbCuentas" alignment="0" max="32767" attributes="0"/>
                                       </Group>
+                                      <EmptySpace pref="57" max="32767" attributes="0"/>
                                       <Group type="103" groupAlignment="0" attributes="0">
-                                          <Group type="102" alignment="0" attributes="0">
-                                              <EmptySpace min="-2" pref="57" max="-2" attributes="0"/>
-                                              <Group type="103" groupAlignment="1" attributes="0">
-                                                  <Component id="jLabel8" min="-2" max="-2" attributes="0"/>
-                                                  <Component id="jLabel11" min="-2" max="-2" attributes="0"/>
-                                                  <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
-                                              </Group>
-                                          </Group>
+                                          <Component id="jLabel8" alignment="1" min="-2" max="-2" attributes="0"/>
+                                          <Component id="jLabel11" alignment="1" min="-2" max="-2" attributes="0"/>
+                                          <Component id="jLabel3" alignment="1" min="-2" max="-2" attributes="0"/>
                                           <Group type="102" alignment="1" attributes="0">
-                                              <EmptySpace max="-2" attributes="0"/>
                                               <Component id="jLabel10" min="-2" max="-2" attributes="0"/>
                                               <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
                                           </Group>
@@ -212,7 +207,6 @@
                                       <EmptySpace min="0" pref="158" max="32767" attributes="0"/>
                                   </Group>
                                   <Group type="102" alignment="1" attributes="0">
-                                      <EmptySpace max="32767" attributes="0"/>
                                       <Component id="btnSaveSinIva" min="-2" pref="157" max="-2" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
                                       <Component id="btnCompraVentasIVA" min="-2" max="-2" attributes="0"/>
