cambios en la conexion

--- a/src/View/MenuPrincipal.form
+++ b/src/View/MenuPrincipal.form
@@ -2730,10 +2730,14 @@
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="btnEliminar" min="-2" max="-2" attributes="0"/>
+                                  <Group type="102" attributes="0">
+                                      <Component id="btnEliminar" min="-2" max="-2" attributes="0"/>
+                                      <EmptySpace min="-2" pref="71" max="-2" attributes="0"/>
+                                      <Component id="jButton1" min="-2" pref="111" max="-2" attributes="0"/>
+                                  </Group>
                                   <Component id="jLabel30" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace pref="793" max="32767" attributes="0"/>
+                              <EmptySpace pref="700" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                     </DimensionLayout>
@@ -2743,7 +2747,10 @@
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="jLabel30" min="-2" max="-2" attributes="0"/>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
-                              <Component id="btnEliminar" min="-2" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                  <Component id="btnEliminar" max="32767" attributes="0"/>
+                                  <Component id="jButton1" max="32767" attributes="0"/>
+                              </Group>
                               <EmptySpace pref="46" max="32767" attributes="0"/>
                           </Group>
                       </Group>
@@ -2774,6 +2781,11 @@
                       <AuxValues>
                         <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
                       </AuxValues>
+                    </Component>
+                    <Component class="javax.swing.JButton" name="jButton1">
+                      <Properties>
+                        <Property name="text" type="java.lang.String" value="BackUp"/>
+                      </Properties>
                     </Component>
                   </SubComponents>
                 </Container>
